--- a/.github/workflows/mertricstest.yml
+++ b/.github/workflows/mertricstest.yml
@@ -113,45 +113,26 @@ jobs:
             -source-path=.
 
       - name: "Code increment #6"
-        if: |
-          github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter6' ||
-          github.head_ref == 'iter7' ||
-          github.head_ref == 'iter8' ||
-          github.head_ref == 'iter9' ||
-          github.head_ref == 'iter10' ||
-          github.head_ref == 'iter11' ||
-          github.head_ref == 'iter12' ||
-          github.head_ref == 'iter13' ||
-          github.head_ref == 'iter14'
+        if: github.event_name == 'pull_request'
         run: |
           SERVER_PORT=$(random unused-port)
           ADDRESS="localhost:${SERVER_PORT}"
           TEMP_FILE=$(random tempfile)
           metricstest -test.v -test.run=^TestIteration6$ \
-            -agent-binary-path=cmd/agent/agent \
-            -binary-path=cmd/server/server \
+            -agent-binary-path=$AGENT_BINARY_PATH \
+            -binary-path=$SERVER_BINARY_PATH \
             -server-port=$SERVER_PORT \
             -source-path=.
 
       - name: "Code increment #7"
-        if: |
-          github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter7' ||
-          github.head_ref == 'iter8' ||
-          github.head_ref == 'iter9' ||
-          github.head_ref == 'iter10' ||
-          github.head_ref == 'iter11' ||
-          github.head_ref == 'iter12' ||
-          github.head_ref == 'iter13' ||
-          github.head_ref == 'iter14'
+        if: github.event_name == 'pull_request'
         run: |
           SERVER_PORT=$(random unused-port)
           ADDRESS="localhost:${SERVER_PORT}"
           TEMP_FILE=$(random tempfile)
           metricstest -test.v -test.run=^TestIteration7$ \
-            -agent-binary-path=cmd/agent/agent \
-            -binary-path=cmd/server/server \
+            -agent-binary-path=$AGENT_BINARY_PATH \
+            -binary-path=$SERVER_BINARY_PATH \
             -server-port=$SERVER_PORT \
             -source-path=.
 
