feat: added tests for storage

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,6 +16,7 @@ issues:
         - funlen
         - depguard
         - exhaustruct
+        - gci
     - path: '(.+)builder\.go'
       linters:
         - exhaustruct
