feat: improve coverage

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -17,6 +17,7 @@ issues:
         - depguard
         - exhaustruct
         - gci
+        - lll
     - path: '(.+)builder\.go'
       linters:
         - exhaustruct
