feat: tests added

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -35,6 +35,7 @@ issues:
     - path: '(.+)validator\.go'
       linters:
         - exhaustruct
+        - err113
 linters-settings:
   depguard:
     rules:
@@ -51,7 +52,7 @@ linters-settings:
           - github.com/npavlov/go-metrics-service/internal/server/handlers
           - github.com/npavlov/go-metrics-service/internal/domain
           - github.com/npavlov/go-metrics-service/internal/model
-          - github.com/npavlov/go-metrics-service/internal/validator
+          - github.com/npavlov/go-metrics-service/internal/validators
           - github.com/go-chi/chi/v5/middleware'
           - github.com/go-chi/chi/v5
           - github.com/npavlov/go-metrics-service/internal/logger
@@ -85,4 +86,5 @@ linters-settings:
           - compress/gzip
           - bytes
           - github.com/andybalholm/brotli
+          - github.com/go-playground/validators/v10
           - github.com/go-playground/validator/v10
