feat: move docker images to docker alpine

--- a/dockerfile.agent
+++ b/dockerfile.agent
@@ -1,4 +1,4 @@
-# Dockerfile.agent
+# Stage 1: Build the Go binary with debugging support
 FROM golang:1.22 AS builder
 
 WORKDIR /app
@@ -16,12 +16,15 @@ RUN go install github.com/go-delve/delve/cmd/dlv@latest
 # Build the agent binary with Delve debug info
 RUN go build -gcflags "all=-N -l" -o agent ./cmd/agent
 
-# Start a new image from a minimal base image
-FROM ubuntu:22.04
+# Stage 2: Create a lightweight container with the built binary
+FROM alpine:3.18
 
 WORKDIR /app
 
-# Copy the compiled agent binary and any required files (e.g., .env files)
+# Install libc6-compat for compatibility with binaries built with glibc
+RUN apk add --no-cache libc6-compat
+
+# Copy the compiled agent binary and Delve debugger
 COPY --from=builder /app/agent /app/agent
 COPY --from=builder /go/bin/dlv /usr/local/bin/dlv
 COPY agent.env /app/agent.env
