--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -12,7 +12,7 @@ sql:
       go:
         package: "db"
         out: "internal/server/db"
-        sql_package: "database/sql"
+        sql_package: "pgx/v5"
         emit_json_tags: true
         emit_db_tags: true
         emit_exported_queries: true
