feat: table reformatted into normalized 3 form

--- a/Makefile.local
+++ b/Makefile.local
@@ -1,5 +1,5 @@
 # Define variables
-MIGRATION_NAME ?= "default_migration_name"
+MIGRATION_NAME = "default_migration_name"
 TEMP_DB=
 DATABASE_DSN=
 
