--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,6 +25,9 @@ issues:
     - path: '(.+)validator\.go'
       linters:
         - err113
+    - path: '(.+)(health_test|dbstorage_test)\.go'
+      linters:
+        - ireturn
 linters-settings:
   varnamelen:
     min-name-length: 2  # Adjust the minimum length as needed
