fix: after review small fixes

--- a/.github/workflows/mertricstest.yml
+++ b/.github/workflows/mertricstest.yml
@@ -205,12 +205,11 @@ jobs:
         run: |
           SERVER_PORT=$(random unused-port)
           ADDRESS="localhost:${SERVER_PORT}"
-          TEMP_FILE=$(random tempfile)
           metricstest -test.v -test.run=^TestIteration14$ \
             -agent-binary-path=$AGENT_BINARY_PATH \
             -binary-path=$SERVER_BINARY_PATH \
             -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable' \
-            -key="${TEMP_FILE}" \
+            -key="invalidkey" \
             -server-port=$SERVER_PORT \
             -source-path=.
 
