--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -19,7 +19,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: stable
+          go-version: '1.23'  # Use the correct Go version
+
+      - name: Install dependencies
+        run: go mod tidy && go mod download
+
+      - name: Clean Go Cache
+        run: go clean -modcache
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
